maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: ':' expected but ')' found.
	def isDirectionFree(dir) = {
                               ^Escaper:59: error: identifier expected but '}' found.
} 
^